Added a bullet to the footer and removed giga from the nav menu.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="index.html"><img class="logo left island-1-2" src="images/logo.svg" alt="Virtual Cookbook logo"/></a>
     <input type="checkbox" class="nav-check" id="nav-check">
   	<!-- This is the button we’d click to open/close the navigation -->
-  	<label class="nav-label giga island-1-2" for="nav-check">Menu</label>
+  	<label class="nav-label island-1-2" for="nav-check">Menu</label>
   	<nav class="nav" id="nav" role="navigation">
       <ul class="list-group text-right">
         <li><a class="island-1-2 inline-block pad-b 1-2" href="index.html">Home</a></li>
@@ -87,7 +87,7 @@
     </div>
   </div>
   <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
-    <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
+    <p class="push-none">© 2015 SAAS <a href="#top"> • Top</a></p>
   </div>
 </footer>
 
