--- a/payment.html
+++ b/payment.html
@@ -125,7 +125,7 @@
 </main>
 
 <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
-  <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
+  <p class="push-none">© 2015 SAAS <a href="#top"> • Top</a></p>
 </div>
 </footer>
 </body>
