--- a/tour.html
+++ b/tour.html
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="unit xs-1 text-center footer white island-1-2" role="contentinfo">
-        <p class="push-none">© 2015 SAAS <a href="#top">Top</a></p>
+        <p class="push-none">© 2015 SAAS <a href="#top"> • Top</a></p>
       </div>
     </footer>
 </body>
