Validated the css and html files.

--- a/thank-you.html
+++ b/thank-you.html
@@ -14,8 +14,8 @@
   <link href="css/colour.css" rel="stylesheet">
 </head>
 
-<body class="grid role="main"">
-  <main class="unit island-1-2">
+<body class="grid">
+  <main class="unit" role="main">
     <h1 class="giga">Thank You!</h1>
     <p>An email will be in your inbox shortly with your validation code.</p>
     <div class="text-center">
