--- a/tour.html
+++ b/tour.html
@@ -45,7 +45,7 @@
         </div>
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/utencil.svg" alt="fory and knife icon" />
+          <img class="svgbig left" src="images/utencil.svg" alt="fory and knife icon">
           <h2 class="giga text-center">Build Your Collection</h2>
           <p class="text-left">Build your own collection of recipies by the saving recipies you like to your own cookbook to make anytime you like.</p>
         </div>
@@ -53,7 +53,7 @@
 
       <div class="ltgrey unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/magnafyingglass.svg" alt="magnafying glass icon"/>
+          <img class="svgbig left" src="images/magnafyingglass.svg" alt="magnafying glass icon">
           <h2 class="giga text-center">Discover Something New</h2>
           <p class="text-left">Browse through other user’s public cookbooks and find new and unique recipies for you to make and try yourself.</p>
         </div>
@@ -61,7 +61,7 @@
 
       <div class="tour unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/checkmark.svg" alt="checkmark icon icon"/>
+          <img class="svgbig left" src="images/checkmark.svg" alt="checkmark icon icon">
           <h2 class="giga text-center">Make Your's Unique</h2>
           <p class="text-left">Customize the colour, fonts, and layout of your cookbook. Organize the recipies in your cookbook anyway you like.</p>
         </div>
@@ -69,7 +69,7 @@
 
       <div class="ltgrey unit xs-1 s-1 m-1 l-1-2 island gutter">
         <div>
-          <img class="svgbig left" src="images/star.svg" alt="star icon"/>
+          <img class="svgbig left" src="images/star.svg" alt="star icon">
           <h2 class="giga text-center">Show Off Your Skills</h2>
           <p class="text-left">Upload and share any of your own recipies you've created for other users to download, use, and comment on.</p>
         </div>
